--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <main class="container"></main>
+    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="user.js"></script>
+    <script type="text/javascript" src="mia.js"></script>
+    <script type="text/javascript" src="poop.js"></script>
 </body>
 </html>
