--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <main class="container"></main>
-    <script type="text/javascript" src="main.js"></script>
-    <script type="text/javascript" src="game.js"></script>
-    <script type="text/javascript" src="user.js"></script>
-    <script type="text/javascript" src="mia.js"></script>
-    <script type="text/javascript" src="poop.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/game.js"></script>
+    <script type="text/javascript" src="./js/user.js"></script>
+    <script type="text/javascript" src="./js/mia.js"></script>
+    <script type="text/javascript" src="./js/poop.js"></script>
 </body>
 </html>
+
